--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "txrm2tiff" %}
-{% set version = "1.1.3" %}
+{% set version = "1.2.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://github.com/DiamondLightSource/{{ name }}/archive/v{{ version }}.tar.gz
-  sha256: 353f5b2974d22cbc246ccec5b8267fdce1b7fad12b9df087c8df5174d825523d
+  sha256: e6f1cf311f6d358e306f4cec3ea05bdd4b326543e83d24e23d8794153f0fc130
 
 build:
   number: 0
@@ -27,6 +27,7 @@ requirements:
     - tifffile >=2019.7.26
     - omexml-dls >=1.0.3
     - olefile >=0.46
+    - pillow >=5.3
     - pywin32  # [win]
 
 test:
