--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,9 +23,9 @@ requirements:
   run:
     - python
     - numpy >=1.20.0
-    - scipy
+    - scipy>=1.3.3
     - tifffile >=2020.9.30
-    - omexml-dls >=1.0.3
+    - omexml-dls >=1.1.0
     - olefile >=0.46
     - pillow >=5.3
     - pywin32  # [win]
@@ -37,9 +37,10 @@ test:
   source_files:
     - tests
   requires:
+    - pytest
     - parameterized
   commands:
-    - python -m unittest discover tests -p "test_*.py" -vv
+    - python -m pytest .
 
 about:
   home: https://github.com/DiamondLightSource/{{ name }}
