--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "txrm2tiff" %}
-{% set version = "2.1.2" %}
+{% set version = "2.2.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,27 +7,28 @@ package:
 
 source:
   url: https://github.com/DiamondLightSource/{{ name }}/archive/v{{ version }}.tar.gz
-  sha256: b6cd1729a744e984e66323100774f95933a81d4b1b27a6ca79d34ffb71be1db9
+  sha256: 10bf878c072bb5dfd5fd00d6b62215965b5ecc30435464b830651ff660fa1fd1
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
     - {{ name }} = {{ name }}.__main__:main
-  skip: true  # [py<37]
+  skip: true  # [py<310]
 
 requirements:
   host:
     - python
     - pip
+    - setuptools
   run:
     - python
-    - numpy >=1.20.0
+    - numpy >=1.24.4
     - scipy >=1.3.3
-    - tifffile >=2020.9.30
+    - tifffile >=2022.7.28
     - omexml-dls >=1.1.0
     - olefile >=0.46
-    - pillow >=5.3, <10.0.0
+    - pillow >=11
     - pywin32  # [win]
 
 test:
@@ -37,10 +38,10 @@ test:
   source_files:
     - tests
   requires:
-    - pytest
-    - parameterized
+    - pytest-cov >=6.0.0
+    - parameterized >=0.9.0
   commands:
-    - python -m pytest .
+    - python -m pytest
 
 about:
   home: https://github.com/DiamondLightSource/{{ name }}
@@ -62,3 +63,4 @@ about:
 extra:
   recipe-maintainers:
     - thomasmfish
+    - PeterC-DLS
